gui版本更新